[package]
name = "hyperdash"
version = "0.1.0"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
edition = "2018"

[dependencies]
cairo-sys-rs = "0.8.0"
font-loader = "0.8.0"
xcb = "0.8"
xkbcommon = "0.4"
chrono = "0.4"

[dependencies.cairo-rs]
version = "0.6.0"
features = ["xcb"]

[dependencies.xcb-util]
version = "0.2"
features = ["keysyms"]

[dependencies.x11]
version = "2.18.1"
features = ["xlib"]

